--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Каталог</title>
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -25,7 +26,10 @@
                     <path d="m15.7 14.69-3.1-3.1c.9-1.2 1.4-2.6 1.4-4.2 0-3.9-3.1-7-7-7s-7 3.1-7 7 3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.39c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z"/>
                 </svg>
                 <input class="menu-form-input" type="search" name="search" placeholder="Текст поиска">
-                <button class="button-search" type="submit"> Найти </button>
+                <span class="menu-input-outline"></span>
+                <button class="button-search" type="submit"> Найти 
+                  <span class="menu-button-outline"></span>
+                </button>
               </form>
             </li>
             <li class="navigation-user-item">
@@ -203,7 +207,7 @@
                     </button>
                     <div class="range-wrapper-inputs">
                       <label class="range-label range-label-min">от
-                        <input class="range-input" type="number" value="0" name="min-price">
+                        <input class="range-input" type="number" value="0" name="min-price">                        
                       </label>
                       <label class="range-label range-label-max">до
                         <input class="range-input" type="number" value="5000" name="max-price">
@@ -258,14 +262,14 @@
               <ul class="catalog-inner-filter-list">
                 <li class="catalog-inner-filter-item">
                   <label class="catalog-inner-filter-choiсe">
-                    <input class="visually-hidden catalog-inner-input"  type="radio" name="yes" checked>
+                    <input class="visually-hidden catalog-inner-input"  type="radio" name="Bluetooth" value="yes" checked>
                     <span class="control-mark control-mark-circle"></span>
                     <span class="catalog-inner-filter-label">Есть</span>
                   </label>
                 </li>
                 <li class="catalog-inner-filter-item">
                   <label class="catalog-inner-filter-choiсe">
-                    <input class="visually-hidden catalog-inner-input"  type="radio" name="no">
+                    <input class="visually-hidden catalog-inner-input" type="radio" name="Bluetooth" value="no">
                     <span class="control-mark control-mark-circle"></span>
                     <span class="catalog-inner-filter-label">Нет</span>
                   </label>
