--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="container">
         <div class="header-top">
-          <a class="header-top-link" href="index.html">
+          <a class="header-top-link" href="#">
             <img class="header-top-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
           </a>
         </div>        
@@ -24,9 +24,13 @@
               <form class="menu-form" action="https://echo.htmlacademy.ru/" method="get">
                 <svg class="menu-icon" aria-hidden="true" focusable="false" width="16" height="17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path d="m15.7 14.69-3.1-3.1c.9-1.2 1.4-2.6 1.4-4.2 0-3.9-3.1-7-7-7s-7 3.1-7 7 3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.39c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z"/>
-                </svg>
+                </svg>                
                 <input class="menu-form-input" type="search" name="search" placeholder="Текст поиска">
-                <button class="button-search" type="submit"> Найти </button>
+                <span class="menu-input-outline"></span>
+                <button class="button-search" type="submit"> Найти 
+                  <span class="menu-button-outline"></span>
+                </button>
+                
               </form>
             </li>
             <li class="navigation-user-item">
@@ -145,10 +149,18 @@
                 <li class="submenu-navigation-item">
                   <a class="submenu-navigation-link" href="#">Умные часы</a>
                 </li>
-                <li class="submenu-navigation-item submenu-navigation-item-1">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры</a>
-                </li>  
-                   
+                <li class="submenu-navigation-item">
+                  <a class="submenu-navigation-link" href="#">Экшн-камеры1</a>
+                </li> 
+                <li class="submenu-navigation-item">
+                  <a class="submenu-navigation-link" href="#">Экшн-камеры2</a>
+                </li> 
+                <li class="submenu-navigation-item">
+                  <a class="submenu-navigation-link" href="#">Экшн-камеры3</a>
+                </li>
+                <li class="submenu-navigation-item">
+                  <a class="submenu-navigation-link" href="#">Экшн-камеры4</a>
+                </li>
               </ul>               
             </li>
             <li class="navigation-item menu-item">
@@ -518,6 +530,7 @@
                 <svg class="social-item-icon" aria-hidden="true" focusable="false" width="9" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z" />
                 </svg>
+                <span class="social-focus"></span>                
               </a>
             </li>
             <li class="social-item">
@@ -527,6 +540,7 @@
                   <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z" fill="#444"/>
                   <path d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7C1.9 0 0 1.9 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1c-2.2 0-4.1-1.8-4.1-4.1S5.8 3.9 8 3.9c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z" />
                 </svg>
+                <span class="social-focus"></span>
               </a>
             </li>
             <li class="social-item">
@@ -535,6 +549,7 @@
                 <svg class="social-item-icon" aria-hidden="true" focusable="false" width="15" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.7.16c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4C1 5.26-.2 2.36.8.86c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" />
                 </svg>
+                <span class="social-focus"></span>
               </a>
             </li>            
           </ul>
