--- a/index.html
+++ b/index.html
@@ -150,17 +150,8 @@
                   <a class="submenu-navigation-link" href="#">Умные часы</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры1</a>
-                </li> 
-                <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры2</a>
-                </li> 
-                <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры3</a>
-                </li>
-                <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры4</a>
-                </li>
+                  <a class="submenu-navigation-link" href="#">Экшн-камеры</a>
+                </li>                 
               </ul>               
             </li>
             <li class="navigation-item menu-item">
@@ -529,8 +520,7 @@
                 <span class="visually-hidden">Facebook</span>
                 <svg class="social-item-icon" aria-hidden="true" focusable="false" width="9" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z" />
-                </svg>
-                <span class="social-focus"></span>                
+                </svg>               
               </a>
             </li>
             <li class="social-item">
@@ -540,7 +530,6 @@
                   <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z" fill="#444"/>
                   <path d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7C1.9 0 0 1.9 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1c-2.2 0-4.1-1.8-4.1-4.1S5.8 3.9 8 3.9c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z" />
                 </svg>
-                <span class="social-focus"></span>
               </a>
             </li>
             <li class="social-item">
@@ -549,7 +538,6 @@
                 <svg class="social-item-icon" aria-hidden="true" focusable="false" width="15" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.7.16c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4C1 5.26-.2 2.36.8.86c1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" />
                 </svg>
-                <span class="social-focus"></span>
               </a>
             </li>            
           </ul>
