--- a/catalog.html
+++ b/catalog.html
@@ -12,12 +12,11 @@
       <div class="container">
         <div class="header-top">
           <a class="header-top-link" href="index.html">
-            <img class="header-top-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
+            <img class="header-top-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип.">
           </a>
         </div>        
       </div>
       <nav class="container">
-        <h2 class="visually-hidden">Навигационное меню</h2>
         <div class="header-middle">
           <ul class="navigation-user-list">
             <li class="navigation-user-item menu-search">
@@ -35,7 +34,7 @@
             <li class="navigation-user-item">
               <ul class="account-list">
                 <li class="account-item">
-                  <button class="button-login">
+                  <button class="button-login" type="button">
                     <svg class="button-icon" aria-hidden="true" focusable="false" width="13" height="13" viewBox="0 0 13 13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 12.39h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3 0-1.9-1.6-3.5-3.5-3.5S3 1.99 3 3.89c0 1.3.7 2.4 1.7 3-2.6.7-4.5 2.9-4.7 5.5Z" />
                     </svg>
@@ -50,7 +49,7 @@
                   </a>
                 </li>
                 <li class="account-item logged" >
-                  <button class="button-logout">Выйти</button>
+                  <button class="button-logout" type="button">Выйти</button>
                 </li>
               </ul>
             </li>
@@ -70,28 +69,29 @@
                     </svg>
                     Корзина
                   </a>
-                  <div class="popover popover-cart popover-close">
+                  <div class="popover popover-cart popover-close">                    
+                    <h2 class="visually-hidden">Корзина</h2>
                     <div class="popover-content">
                       <ul class="popover-list">
                         <li class="popover-item">
                           <a class="popover-link" href="#">
-                            <img class="popover-img" src="images/products/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка">
+                            <img class="popover-img" src="images/products/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка.">
                             <div class="popover-descr">
                               Любительская селфи-палка
                             </div>
                           </a>
-                          <button class="popover-close-button">
+                          <button class="popover-close-button" type="button">
                             <span class="visually-hidden">Закрыть</span>
                           </button>
                         </li>
                         <li class="popover-item">
                           <a class="popover-link" href="#">
-                            <img class="popover-img" src="images/products/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка">
+                            <img class="popover-img" src="images/products/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка.">
                             <div class="popover-descr">
                               Профессиональная селфи-палка
                             </div>
                           </a>
-                          <button class="popover-close-button">
+                          <button class="popover-close-button" type="button">
                             <span class="visually-hidden">Закрыть</span>
                           </button>
                         </li>                      
@@ -115,7 +115,7 @@
                           </div>
                         </li>                      
                       </ul>
-                      <button class="open-cart-button">Открыть корзину</button>  
+                      <a class="open-cart-button" href="#">Открыть корзину</a>
                     </div>                                      
                   </div>
                 </li>
@@ -126,9 +126,9 @@
         <div class="header-bottom header-bottom-inner">
           <ul class="navigation-list">
             <li class="navigation-item menu-nav">
-              <div class="menu-button">
+              <div class="menu-button" tabindex="0">
                 <span>Каталог товаров</span>
-                <button class="button-dropdown">
+                <button class="button-dropdown" type="button">
                   <span class="visually-hidden">Раскрывающийся список товаров</span>
                 </button>
               </div>
@@ -150,8 +150,7 @@
                 </li>
                 <li class="submenu-navigation-item submenu-navigation-item-1">
                   <a class="submenu-navigation-link" href="#">Экшн-камеры</a>
-                </li>  
-                   
+                </li>
               </ul>               
             </li>
             <li class="navigation-item menu-item">
@@ -182,7 +181,7 @@
               <a class="breadcrumbs-link" href="index.html">Главная</a>
             </li>
             <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link" href="catalog.html">Каталог товаров</a>
+              <a class="breadcrumbs-link" href="#">Каталог товаров</a>
             </li>
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link">Моноподы для селфи</a>
@@ -315,96 +314,88 @@
             </form>
             <div class="catalog-inner-wrapper">
               <ul class="catalog-inner-list">
-                <li class="catalog-inner-card">
-                  <a class="catalog-inner-card-link" href="#">
-                    <div class="catalog-inner-card-img">
-                      <img src="images/products/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
-                      <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
-                      <button class="button-inner-card-more">Подробнее</button>
-                    </div>
-                    <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Любительская<br>
-                        селфи-палка</h3>
-                      <span class="catalog-inner-card-price">500 ₽</span>
-                    </div>
-                  </a>
+                <li class="catalog-inner-card" tabindex="0">
+                  <div class="catalog-inner-card-img">
+                    <img src="images/products/product-1.jpg" width="360" height="380" alt="Любительская селфи-палка.">
+                    <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
+                    <a class="button-inner-card-more" href="#">Подробнее</a>
+                  </div>
+                  <div class="catalog-inner-card-descr">
+                    <h3 class="catalog-inner-card-subtitle">Любительская<br>
+                      селфи-палка</h3>
+                    <span class="catalog-inner-card-price">500 ₽</span>
+                  </div>                  
                 </li>
-                <li class="catalog-inner-card">
-                  <a class="catalog-inner-card-link" href="#" >
-                    <div class="catalog-inner-card-img">
-                      <img src="images/products/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
-                      <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
-                      <button class="button-inner-card-more">Подробнее</button>
-                    </div>
-                    <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Профессиональная селфи-палка </h3>
-                      <span class="catalog-inner-card-price">1 500 ₽</span>
-                    </div>
-                  </a>
+                <li class="catalog-inner-card" tabindex="0">
+                  <div class="catalog-inner-card-img">
+                    <img src="images/products/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка.">
+                    <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
+                    <a class="button-inner-card-more" href="#">Подробнее</a>
+                  </div>
+                  <div class="catalog-inner-card-descr">
+                    <h3 class="catalog-inner-card-subtitle">Профессиональная селфи-палка </h3>
+                    <span class="catalog-inner-card-price">1 500 ₽</span>
+                  </div>
                 </li>
-                <li class="catalog-inner-card">
-                  <a class="catalog-inner-card-link" href="#">
-                    <div class="catalog-inner-card-img">
-                      <img src="images/products/product-3.jpg" width="360" height="380" alt="Непотопляемая
-                    селфи-палка">
-                      <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
-                      <button class="button-inner-card-more">Подробнее</button>
-                    </div>
-                    <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Непотопляемая<br>
-                        селфи-палка</h3>
-                      <span class="catalog-inner-card-price">2 500 ₽</span>
-                    </div>
-                  </a>
+                <li class="catalog-inner-card" tabindex="0">
+                  <div class="catalog-inner-card-img">
+                    <img src="images/products/product-3.jpg" width="360" height="380" alt="Непотопляемая
+                  селфи-палка.">
+                    <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
+                    <a class="button-inner-card-more" href="#">Подробнее</a>
+                  </div>
+                  <div class="catalog-inner-card-descr">
+                    <h3 class="catalog-inner-card-subtitle">Непотопляемая<br>
+                      селфи-палка</h3>
+                    <span class="catalog-inner-card-price">2 500 ₽</span>
+                  </div>
                 </li>
-                <li class="catalog-inner-card">
-                  <a class="catalog-inner-card-link" href="#">
-                    <div class="catalog-inner-card-img">
-                      <img src="images/products/product-4.jpg" width="360" height="380" alt="Селфи-палка">
-                      <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
-                      <button class="button-inner-card-more">Подробнее</button>
-                    </div>
-                    <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй за мной»</h3>
-                      <span class="catalog-inner-card-price">1 500 ₽</span>
-                    </div>
-                  </a>
+                <li class="catalog-inner-card" tabindex="0">
+                  <div class="catalog-inner-card-img">
+                    <img src="images/products/product-4.jpg" width="360" height="380" alt="Селфи-палка.">
+                    <span class="catalog-inner-card-img-new catalog-inner-card-img-new-close">NEW</span>
+                    <a class="button-inner-card-more" href="#">Подробнее</a>
+                  </div>
+                  <div class="catalog-inner-card-descr">
+                    <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй за мной»</h3>
+                    <span class="catalog-inner-card-price">1 500 ₽</span>
+                  </div>
                 </li>
               </ul>
               <div class="download">
-                <button class="button download-more">Загрузить ещё</button>
+                <button class="button download-more" type="button">Загрузить ещё</button>
               </div>
               <ul class="pagination-list">
                 <li class="pagination-item">
-                  <button class="pagination-button pagination-button-prev">Назад
+                  <button class="pagination-button pagination-button-prev" type="button">Назад
                   </button>
                 </li>
                 <li class="pagination-item">
                   <ol class="pagination-number-list">
                     <li class="pagination-number-item">
-                      <button class="pagination-button pagination-button-current">1
+                      <button class="pagination-button pagination-button-current" type="button">1
                       </button>
                     </li>
                     <li class="pagination-number-item">
-                      <button class="pagination-button">2
+                      <button class="pagination-button" type="button">2
                       </button>
                     </li>
                     <li class="pagination-number-item">
-                      <button class="pagination-button">3
+                      <button class="pagination-button" type="button">3
                       </button>
                     </li>
                     <li class="pagination-number-item">
-                      <button class="pagination-button">...
+                      <button class="pagination-button" type="button">...
                       </button>
                     </li>
                     <li class="pagination-number-item">
-                      <button class="pagination-button">15
+                      <button class="pagination-button" type="button">15
                       </button>
                     </li>                                                                 
                   </ol>
                 </li>
                 <li class="pagination-item">
-                  <button class="pagination-button pagination-button-next">Вперед
+                  <button class="pagination-button pagination-button-next" >Вперед
                   </button>
                 </li>
               </ul>
@@ -417,7 +408,7 @@
       <div class="container">
         <div class="footer-top">
           <a class="footer-top-link" href="index.html">
-            <img class="footer-top-img" src="images/logo/logo-color.svg" width="145" height="36" alt="Логотип Девайс">
+            <img class="footer-top-img" src="images/logo/logo-color.svg" width="145" height="36" alt="Логотип Девайс.">
           </a>
         </div>
         <div class="footer-middle">
