correct form required form mail

--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-  <body>
-    <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>    
+  <body>    
     <header class="main-header inner-header">
       <div class="container">
         <div class="header-top">
@@ -174,8 +173,9 @@
       <div class="container">
         <h1 class="title-inner">Моноподы для селфи</h1>
       </div>
-      <section class="breadcrumbs">
+      <section class="breadcrumbs">        
         <div class="container">
+          <h2 class="visually-hidden">Навигационное меню</h2>
           <ul class="breadcrumbs-list">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html">Главная</a>
