--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
           </div>
           <div class="mailing-form">
             <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
-              <input type="email" name="email" placeholder="Ваш e-mail">
+              <input type="email" name="email" placeholder="Ваш e-mail" required>
               <button class="button-mail" type="submit">Подписаться</button>
             </form>
             <p>Это бесплатно</p>
