correct state disable and states in form
Откорректированы состояния элементов, проверка проекта

--- a/catalog.html
+++ b/catalog.html
@@ -133,22 +133,22 @@
               </div>
               <ul class="submenu-navigation-list submenu-navigation-list-close">
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Виртуальная реальность</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Виртуальная реальность</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Фитнес-браслеты</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Фитнес-браслеты</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Квадрокоптеры</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Квадрокоптеры</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="catalog.html">Моноподы для cелфи</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="catalog.html">Моноподы для cелфи</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Умные часы</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Умные часы</a>
                 </li>
                 <li class="submenu-navigation-item submenu-navigation-item-1">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Экшн-камеры</a>
                 </li>
               </ul>               
             </li>
@@ -230,7 +230,7 @@
                 </li>
                 <li class="catalog-inner-filter-item">
                   <label class="catalog-inner-filter-choiсe">
-                    <input class="visually-hidden catalog-inner-input"  type="checkbox" name="white" checked>
+                    <input class="visually-hidden catalog-inner-input"  type="checkbox" name="white" checked> 
                     <span class="control-mark"></span>
                     <span class="catalog-inner-filter-label">Белый</span>
                   </label>
