--- a/index.html
+++ b/index.html
@@ -134,22 +134,22 @@
               </div>
               <ul class="submenu-navigation-list submenu-navigation-list-close">
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Виртуальная реальность</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Виртуальная реальность</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Фитнес-браслеты</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Фитнес-браслеты</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Квадрокоптеры</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Квадрокоптеры</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="catalog.html">Моноподы для cелфи</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="catalog.html">Моноподы для cелфи</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Умные часы</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Умные часы</a>
                 </li>
                 <li class="submenu-navigation-item">
-                  <a class="submenu-navigation-link" href="#">Экшн-камеры</a>
+                  <a class="submenu-navigation-link submenu-navigation-link-current" href="#">Экшн-камеры</a>
                 </li>                 
               </ul>               
             </li>
@@ -229,7 +229,7 @@
                 <button class="slider-button slider-button-prev" type="button">
                   <span class="visually-hidden">Предыдущая страница</span>
                 </button>
-                <a href="#"><img src="images/sliders/slider-2.png" width="530" height="530" alt="Фитнес-браслет."></a>
+                <a href="#"><img src="images/sliders/slider-2.png" width="560" height="560" alt="Фитнес-браслет."></a>
                 <button class="slider-button slider-button-next" type="button">
                   <span class="visually-hidden">Следующая страница</span>
                 </button>
@@ -244,12 +244,12 @@
                   <a class="slider-link" href="#">Подробнее</a>
                 <ol class="slider-pagination">
                   <li class="slider-pagination-item">
-                    <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                    <button class="slider-pagination-button" type="button">
                       <span class="visually-hidden">Первый слайд</span>
                     </button>
                   </li>
                   <li class="slider-pagination-item">
-                    <button class="slider-pagination-button" type="button">
+                    <button class="slider-pagination-button slider-pagination-button-current" type="button">
                       <span class="visually-hidden">Второй слайд</span>
                     </button>
                   </li>
@@ -273,7 +273,7 @@
                 <button class="slider-button slider-button-prev" type="button">
                   <span class="visually-hidden">Предыдущая страница</span>
                 </button>
-                <a href="#"><img src="images/sliders/slider-3.png" width="530" height="530" alt="Палка для селфи."></a>
+                <a href="#"><img src="images/sliders/slider-3.png" width="560" height="560" alt="Палка для селфи."></a>
                 <button class="slider-button slider-button-next" type="button">
                   <span class="visually-hidden">Следующая страница</span>
                 </button>
@@ -281,7 +281,7 @@
               <div class="slider-wrapper">
                 <h3 class="visually-hidden">Селфи-палка</h3>
                 <div class="slider-number">03</div>
-                <div class="slider-subtitle">Делай селфи,
+                <div class="slider-subtitle">Делай селфи,<br>
                   как Бен Стиллер! </div>
                 <div class="slider-descr">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
                 </div>
@@ -289,7 +289,7 @@
                   <a class="slider-link" href="#">Подробнее</a>
                 <ol class="slider-pagination">
                   <li class="slider-pagination-item">
-                    <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                    <button class="slider-pagination-button" type="button">
                       <span class="visually-hidden">Первый слайдер</span>
                     </button>
                   </li>
@@ -299,7 +299,7 @@
                     </button>
                   </li>
                   <li class="slider-pagination-item">
-                    <button class="slider-pagination-button" type="button">
+                    <button class="slider-pagination-button slider-pagination-button-current" type="button">
                       <span class="visually-hidden">Третий слайдер</span>
                     </button>
                   </li>
@@ -402,9 +402,9 @@
           <h2 class="visually-hidden">Услуги</h2>
           <div class="service-column" id="service">
             <ul class="service-list">
-              <li class="service-item service-item-current"><button class="button-service button-service-current" type="button">Доставка</button></li>
-              <li class="service-item"><button class="button-service" type="button">Гарантия</button></li>
-              <li class="service-item"><button class="button-service" type="button">Кредит</button></li>
+              <li class="service-item service-item-current" tabindex="0"><button class="button-service button-service-current" type="button">Доставка</button></li>
+              <li class="service-item" tabindex="0"><button class="button-service" type="button">Гарантия</button></li>
+              <li class="service-item" tabindex="0"><button class="button-service" type="button">Кредит</button></li>
             </ul>
             <div class="service-wrapper">
               <div class="service-wrapper-item service-wrapper-item-delivery service-wrapper-item-current" id="delivery" >
@@ -421,7 +421,7 @@
               </div>
               <div class="service-wrapper-item service-wrapper-item-credit" id="credit">
                 <h3 class="service-item-subtitle">Кредит</h3>
-                <div class="service-item-descr">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</div>
+                <div class="service-item-descr">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные <br>условия кредита. Выгодные для банка, разумеется.</div>
               </div>
             </div>
           </div>
@@ -432,13 +432,11 @@
           <h3 class="visually-hidden">Доставка под заказ</h3>
           <button class="order-button" type="button">Доставим редкий товар под заказ            
           </button>
-          <span class="tooltip">
-            <button class="tooltip-button tooltip-button-order" aria-labelledby="tooltip-label" type="button">
-              <svg aria-hidden="true" focusable="false" width="4" height="12" viewBox="0 0 4 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path d="M3 0H1v2h2V0ZM3 4H1v8h2V4Z"/>
-              </svg>
-            </button>
-          </span>
+          <button class="tooltip-button-order" aria-labelledby="tooltip-label" type="button">
+            <svg aria-hidden="true" focusable="false" width="4" height="12" viewBox="0 0 4 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3 0H1v2h2V0ZM3 4H1v8h2V4Z"/>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="information">
@@ -572,7 +570,7 @@
           </p>
           <p class="order-form-text">
             <label class="form-label" for="form-text">Что нужно привезти:</label>
-            <input class="form-input" id="form-text" type="text" name="additional" placeholder="В свободной форме" required>
+            <input class="form-input" id="form-text" type="text" name="product" placeholder="В свободной форме">
           </p>
           <p class="order-form-number">
             <span class="form-label">
@@ -592,7 +590,7 @@
             <button class="number-button number-button-minus" type="button">
               <span class="visually-hidden">Уменьшить количество</span>
             </button>
-            <input class="form-input form-input-number" id="form-number" type="number" name="count" placeholder="1">
+            <input class="form-input form-input-number" id="form-number" type="number" name="count" value="1" min="1" >
             <button class="number-button number-button-plus" type="button">
               <span class="visually-hidden">Увеличить количество</span>
             </button>
