correct mistakes with focus state service and state required in forms

--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
           <h2 class="visually-hidden">Услуги</h2>
           <div class="service-column" id="service">
             <ul class="service-list">
-              <li class="service-item service-item-current" tabindex="0"><button class="button-service button-service-current" type="button">Доставка</button></li>
-              <li class="service-item" tabindex="0"><button class="button-service" type="button">Гарантия</button></li>
-              <li class="service-item" tabindex="0"><button class="button-service" type="button">Кредит</button></li>
+              <li class="service-item service-item-current"><button class="button-service button-service-current" type="button">Доставка</button></li>
+              <li class="service-item"><button class="button-service" type="button">Гарантия</button></li>
+              <li class="service-item"><button class="button-service" type="button">Кредит</button></li>
             </ul>
             <div class="service-wrapper">
               <div class="service-wrapper-item service-wrapper-item-delivery service-wrapper-item-current" id="delivery" >
@@ -482,7 +482,7 @@
           </div>
           <div class="mailing-form">
             <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
-              <input type="email" name="email" placeholder="Ваш e-mail" required>
+              <input type="email" name="email" placeholder="Ваш e-mail">
               <button class="button-mail" type="submit">Подписаться</button>
             </form>
             <p>Это бесплатно</p>
@@ -560,12 +560,12 @@
           <p class="order-form-name">
             <label class="form-label" for="form-name">Ваше имя:
             </label>
-            <input class="form-input form-input-name" id="form-name" type="text" name="name" placeholder="Введите имя" required>
+            <input class="form-input form-input-name" id="form-name" type="text" name="name" placeholder="Введите имя">
             <span class="form-message">Добавьте имя</span>
           </p>
           <p class="order-form-mail">
             <label class="form-label" for="form-mail">Ваш e-mail:</label>
-            <input class="form-input form-input-mail" id="form-mail" type="email" name="mail" placeholder="почта" required>
+            <input class="form-input form-input-mail" id="form-mail" type="email" name="mail" placeholder="почта">
             <span class="form-message">Забавный у вас адрес</span>
           </p>
           <p class="order-form-text">
