correct mistakes about state required and Pixel Perfect

--- a/catalog.html
+++ b/catalog.html
@@ -357,7 +357,7 @@
                     <a class="button-inner-card-more" href="#">Подробнее</a>
                   </div>
                   <div class="catalog-inner-card-descr">
-                    <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй за мной»</h3>
+                    <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй<br> за мной»</h3>
                     <span class="catalog-inner-card-price">1 500 ₽</span>
                   </div>
                 </li>
