--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
             <div class="service-wrapper">
               <div class="service-wrapper-item service-wrapper-item-delivery service-wrapper-item-current" id="delivery" >
                 <h3 class="service-item-subtitle">Доставка</h3>
-                <div class="service-item-descr">Мы с удовольствием доставим ваш товар прямо
-                  <br>к вашему подъезду совершенно бесплатно! Ведь
+                <div class="service-item-descr">Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду совершенно бесплатно! Ведь
                   мы неплохо заработаем, поднимая его на ваш этаж.</div>
               </div>
               <div class="service-wrapper-item service-wrapper-item-guarantee" id="guarantee">
@@ -482,7 +482,7 @@
           </div>
           <div class="mailing-form">
             <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
-              <input type="email" name="email" placeholder="Ваш e-mail">
+              <input type="email" name="email" placeholder="Ваш e-mail" required>
               <button class="button-mail" type="submit">Подписаться</button>
             </form>
             <p>Это бесплатно</p>
@@ -560,17 +560,17 @@
           <p class="order-form-name">
             <label class="form-label" for="form-name">Ваше имя:
             </label>
-            <input class="form-input form-input-name" id="form-name" type="text" name="name" placeholder="Введите имя">
+            <input class="form-input form-input-name" id="form-name" type="text" name="name" placeholder="Введите имя" required>
             <span class="form-message">Добавьте имя</span>
           </p>
           <p class="order-form-mail">
             <label class="form-label" for="form-mail">Ваш e-mail:</label>
-            <input class="form-input form-input-mail" id="form-mail" type="email" name="mail" placeholder="почта">
+            <input class="form-input form-input-mail" id="form-mail" type="email" name="mail" placeholder="почта" required>
             <span class="form-message">Забавный у вас адрес</span>
           </p>
           <p class="order-form-text">
             <label class="form-label" for="form-text">Что нужно привезти:</label>
-            <input class="form-input" id="form-text" type="text" name="product" placeholder="В свободной форме">
+            <input class="form-input" id="form-text" type="text" name="product" placeholder="В свободной форме" required>
           </p>
           <p class="order-form-number">
             <span class="form-label">
